--- a/client/news-events.html
+++ b/client/news-events.html
@@ -42,14 +42,17 @@
       </style>
 </head>
 
-<body class="bg-gray-100 p-4">
-    <nav class="sticky top-0 z-50 bg-navy py-3 px-6 shadow-lg">
+<body class="bg-gray-100">
+    <nav class="sticky top-0 z-50 bg-navy py-3 px-6 shadow-lg ">
         <div class="container mx-auto flex flex-wrap items-center justify-between">
+            <!-- Logo and Title -->
             <a href="./index.html" class="flex items-center">
                 <img src="https://ccsaalumni.in/static/media/du.ac81f37e7c52c0eb3d53.png" alt="DU Logo"
                     class="w-12 h-12 rounded-full mr-3">
-                <span class="text-xl text-antique-white font-bold">CSJMC Alumni</span>
+                <span class="text-xl text-antique-white font-bold">Pharmaceutical Society</span>
             </a>
+
+            <!-- Navbar Toggle for Mobile -->
             <button id="navbar-toggle" class="lg:hidden text-antique-white">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
@@ -57,39 +60,59 @@
                     </path>
                 </svg>
             </button>
+
+            <!-- Navbar Menu -->
             <div id="navbar-menu" class="hidden lg:flex lg:items-center w-full lg:w-auto mt-4 lg:mt-0">
-                <ul class="flex flex-col lg:flex-row lg:ml-auto">
+                <ul class="flex flex-col lg:flex-row lg:ml-auto space-x-4 items-center">
                     <li><a href="./index.html"
-                            class="nav-link text-antique-white px-4 py-2 mx-1 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Home</a>
+                            class="nav-link text-antique-white px-4 py-2 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Home</a>
                     </li>
                     <li><a href="./alumni.html"
-                            class="nav-link text-antique-white px-4 py-2 mx-1 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Alumni</a>
+                            class="nav-link text-antique-white px-4 py-2 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Alumni</a>
                     </li>
                     <li><a href="./student.html"
-                            class="nav-link text-antique-white px-4 py-2 mx-1 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Students</a>
+                            class="nav-link text-antique-white px-4 py-2 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Students</a>
                     </li>
                     <li><a href="./about.html"
-                            class="nav-link text-antique-white px-4 py-2 mx-1 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">About</a>
+                            class="nav-link text-antique-white px-4 py-2 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">About</a>
                     </li>
                     <li><a href="./news-events.html"
-                            class="nav-link text-antique-white px-4 py-2 mx-1 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">News
+                            class="nav-link text-antique-white px-4 py-2 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">News
                             and Events</a></li>
-                    <li><a href="./alumni-form.html"
-                            class="nav-link text-antique-white px-4 py-2 mx-1 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Alumni
-                            Form</a></li>
-                    <li><a href="./student-form.html"
-                            class="nav-link text-antique-white px-4 py-2 mx-1 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Student
-                            Form</a></li>
-                    <li><a href="./posts.html"
-                            class="nav-link text-antique-white px-4 py-2 mx-1 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Posts</a>
+
+                    <!-- Dropdown Menu for Forms -->
+                    <li class="relative group">
+                        <a href="#"
+                            class="nav-link text-antique-white px-4 py-2 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Register</a>
+                        <ul class="absolute hidden group-hover:block bg-navy mt-1 rounded-md shadow-lg">
+                            <li><a style="text-wrap: nowrap;" href="./alumni-form.html"
+                                    class="block px-4 py-2 text-antique-white hover:bg-blue-600 hover:text-yellow-300 transition duration-300 ease-in-out">Alumni
+                                    Form</a></li>
+                            <li><a style="text-wrap: nowrap;" href="./student-form.html"
+                                    class="block px-4 py-2 text-antique-white hover:bg-blue-600 hover:text-yellow-300 transition duration-300 ease-in-out">Student
+                                    Form</a></li>
+                        </ul>
                     </li>
-                    <li><a href="./profile.html"
-                            class="nav-link text-antique-white px-4 py-2 mx-1 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Profile</a>
+
+                    <li><a href="./posts.html"
+                            class="nav-link text-antique-white px-4 py-2 rounded-md transition duration-300 ease-in-out hover:text-yellow-300 hover:bg-blue-600 font-medium">Posts</a>
+                    </li>
+
+                    <!-- Profile Image -->
+                    <li class="ml-auto">
+                        <a href="./profile.html" class="flex items-center">
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJ-l3onxJrLVYB8Ak7aKCYcOznSKyaPz1P8Q&s"
+                                alt="Profile Image"
+                                class="w-10 h-10 rounded-full border-2 border-white hover:border-yellow-300 transition duration-300 ease-in-out">
+                        </a>
                     </li>
                 </ul>
+
+                <!-- Join Us Button -->
                 <button id="auth-button"
-                    class="mt-4 lg:mt-0 lg:ml-4 bg-button-red text-antique-white px-6 py-2 rounded-full transition duration-300 ease-in-out hover:bg-button-red-hover">Join
-                    us</button>
+                    class="ml-4 bg-button-red text-antique-white px-6 py-2 rounded-full transition duration-300 ease-in-out hover:bg-button-red-hover">
+                    Join us
+                </button>
             </div>
         </div>
     </nav>
@@ -182,90 +205,167 @@
 
     <!-- Footer -->
     <div class="font-montserrat bg-antiquewhite">
-        <footer class="text-center text-lg-start text-muted bg-antiquewhite overflow-hidden">
-            <!-- Social Media Links -->
-            <section class="flex justify-center items-center p-4 border-b border-gray-300">
-                <div class="hidden lg:flex items-center text-lg font-bold text-navy mx-10">
-                    Get connected with us on social networks:
-                </div>
-                <div class="flex space-x-4 text-2xl text-gray-700">
-                    <a href="https://www.facebook.com/ducsjmc/" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="https://twitter.com/DUCSJMC" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="https://maps.app.goo.gl/hVm5jknh8hpqxqP88" target="_blank"><i
-                            class="fab fa-google"></i></a>
-                    <a href="https://www.instagram.com/dumasscomm/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/school/dibrugarh-university-dibrugarh/?originalSubdomain=in"
-                        target="_blank">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
-                </div>
-            </section>
-
-            <!-- Footer Links -->
-            <section class="container mx-auto mt-5 text-center lg:text-left">
-                <div class="flex flex-wrap">
-                    <!-- About Section -->
-                    <div class="w-full lg:w-1/4 px-4 mb-6 lg:mb-0">
-                        <h6 class="uppercase font-bold text-navy mb-4 flex items-center text-lg">
-                            <i class="fas fa-university mr-2"></i> CSJMC DU
-                        </h6>
-                        <p class="text-base font-medium text-navy">&copy; Centre for Studies in Journalism & Mass
-                            Communication</p>
-                    </div>
-
-                    <!-- Important Links -->
-                    <div class="w-full sm:w-1/2 lg:w-1/4 px-4 mb-6 lg:mb-0">
-                        <h6 class="uppercase font-bold text-navy mb-4 text-lg">Important Links</h6>
-                        <ul class="space-y-2">
-                            <li><a href="https://dibru.ac.in/" target="_blank"
-                                    class="text-gray-700 font-semibold hover:underline">Dibrugarh University</a></li>
-                            <li><a href="https://erp.dibru.work/dibru/student/login" target="_blank"
-                                    class="text-gray-700 font-semibold hover:underline">ERP Portal</a></li>
-                            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSewaN2-wlaET3fROMTOUrpLsG37Vb5Z-ZY_gy1XPCG7ijENhQ/viewform"
-                                    target="_blank" class="text-gray-700 font-semibold hover:underline">DUAA Portal</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <!-- Quick Links -->
-                    <div class="w-full sm:w-1/2 lg:w-1/4 px-4 mb-6 lg:mb-0">
-                        <h6 class="uppercase font-bold text-navy mb-4 text-lg">Quick Links</h6>
-                        <ul class="space-y-2">
-                            <li><a href="/" class="text-gray-700 font-semibold hover:underline">Home</a></li>
-                            <li><a href="https://scribehow.com/shared/Join_CSJMC_Alumni_Association_and_Update_Profile__iAp2_DMCRyGKgzFFMkeF_A"
-                                    target="_blank" class="text-gray-700 font-semibold hover:underline">Website
-                                    Instructions</a></li>
-                            <li><a href="/alumniform" class="text-gray-700 font-semibold hover:underline">Alumni
-                                    Registration</a></li>
-                            <li><a href="https://forms.gle/b6e8wfEJtxntS8uc8" target="_blank"
-                                    class="text-gray-700 font-semibold hover:underline">Report an Error</a></li>
-                        </ul>
-                    </div>
-
-                    <!-- Contact Section -->
-                    <div class="w-full lg:w-1/4 px-4">
-                        <h6 class="uppercase font-bold text-navy mb-4 text-lg">Contact</h6>
-                        <p><i class="fas fa-home mr-2"></i><a href="https://maps.app.goo.gl/wWHJG7H3w6JL9xUZ7"
-                                target="_blank" class="text-gray-700 font-semibold hover:underline">Centre For Studies
-                                In Journalism And Mass
-                                Communication, Dibrugarh University, Assam 786004</a></p>
-                        <p><i class="fas fa-envelope mr-2"></i><a href="mailto:ducsjmc@gmail.com"
-                                class="text-gray-700 font-semibold hover:underline">ducsjmc@gmail.com</a></p>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Footer Bottom -->
-            <div class="text-center py-3 bg-navy text-white mt-6">
-                Developed By:
-                <a href="https://www.linkedin.com/in/saheb-ullah-05292a258/" target="_blank"
-                    class="font-bold hover:underline">Md Sahebullah</a> &
-                <a href="https://www.linkedin.com/in/kalyangupta12/" target="_blank"
-                    class="font-bold hover:underline">Kalyan
-                    Gupta</a>
+        <footer
+          class="text-center text-lg-start text-muted bg-antiquewhite overflow-hidden"
+        >
+          <!-- Social Media Links -->
+          <section
+            class="flex justify-center items-center p-4 border-b border-gray-300"
+          >
+            <div
+              class="hidden lg:flex items-center text-lg font-bold text-navy mx-10"
+            >
+              Get connected with us on social networks:
             </div>
+            <div class="flex space-x-4 text-2xl text-gray-700">
+              <a href="https://www.facebook.com/ducsjmc/" target="_blank"
+                ><i class="fab fa-facebook"></i
+              ></a>
+              <a href="https://twitter.com/DUCSJMC" target="_blank"
+                ><i class="fab fa-twitter"></i
+              ></a>
+              <a href="https://maps.app.goo.gl/hVm5jknh8hpqxqP88" target="_blank"
+                ><i class="fab fa-google"></i
+              ></a>
+              <a href="https://www.instagram.com/dumasscomm/" target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/school/dibrugarh-university-dibrugarh/?originalSubdomain=in"
+                target="_blank"
+              >
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </div>
+          </section>
+  
+          <!-- Footer Links -->
+          <section class="container mx-auto mt-5 text-center lg:text-left">
+            <div class="flex flex-wrap">
+              <!-- About Section -->
+              <div class="w-full lg:w-1/4 px-4 mb-6 lg:mb-0">
+                <h6
+                  class="uppercase font-bold text-navy mb-4 flex items-center text-lg"
+                >
+                  <i class="fas fa-university mr-2"></i> Pharmaceutical Society,
+                  Dibrugarh University
+                </h6>
+                <p class="text-base font-medium text-navy">
+                  &copy; Pharmaceutical Society
+                </p>
+              </div>
+  
+              <!-- Important Links -->
+              <div class="w-full sm:w-1/2 lg:w-1/4 px-4 mb-6 lg:mb-0">
+                <h6 class="uppercase font-bold text-navy mb-4 text-lg">
+                  Important Links
+                </h6>
+                <ul class="space-y-2">
+                  <li>
+                    <a
+                      href="https://dibru.ac.in/"
+                      target="_blank"
+                      class="text-gray-700 font-semibold hover:underline"
+                      >Dibrugarh University</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://erp.dibru.work/dibru/student/login"
+                      target="_blank"
+                      class="text-gray-700 font-semibold hover:underline"
+                      >ERP Portal</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://docs.google.com/forms/d/e/1FAIpQLSewaN2-wlaET3fROMTOUrpLsG37Vb5Z-ZY_gy1XPCG7ijENhQ/viewform"
+                      target="_blank"
+                      class="text-gray-700 font-semibold hover:underline"
+                      >DUAA Portal</a
+                    >
+                  </li>
+                </ul>
+              </div>
+  
+              <!-- Quick Links -->
+              <div class="w-full sm:w-1/2 lg:w-1/4 px-4 mb-6 lg:mb-0">
+                <h6 class="uppercase font-bold text-navy mb-4 text-lg">
+                  Quick Links
+                </h6>
+                <ul class="space-y-2">
+                  <li>
+                    <a
+                      href="/"
+                      class="text-gray-700 font-semibold hover:underline"
+                      >Home</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://scribehow.com/shared/Join_CSJMC_Alumni_Association_and_Update_Profile__iAp2_DMCRyGKgzFFMkeF_A"
+                      target="_blank"
+                      class="text-gray-700 font-semibold hover:underline"
+                      >Website Instructions</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="/alumniform"
+                      class="text-gray-700 font-semibold hover:underline"
+                      >Alumni Registration</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://forms.gle/b6e8wfEJtxntS8uc8"
+                      target="_blank"
+                      class="text-gray-700 font-semibold hover:underline"
+                      >Report an Error</a
+                    >
+                  </li>
+                </ul>
+              </div>
+  
+              <!-- Contact Section -->
+              <div class="w-full lg:w-1/4 px-4">
+                <h6 class="uppercase font-bold text-navy mb-4 text-lg">
+                  Contact
+                </h6>
+                <p>
+                  <i class="fas fa-home mr-2"></i
+                  ><a
+                    href="https://maps.app.goo.gl/wWHJG7H3w6JL9xUZ7"
+                    target="_blank"
+                    class="text-gray-700 font-semibold hover:underline"
+                    >Pharmaceutical Society, Dibrugarh University, Dibrugarh,
+                    Assam 786004</a
+                  >
+                </p>
+                <p>
+                  <i class="fas fa-envelope mr-2"></i
+                  ><a
+                    href="mailto:pharmsociety@dibru.ac.in"
+                    class="text-gray-700 font-semibold hover:underline"
+                    >pharmsociety@dibru.ac.in</a
+                  >
+                </p>
+              </div>
+            </div>
+          </section>
+  
+          <!-- Footer Bottom -->
+          <div class="text-center py-3 bg-navy text-white mt-6">
+            Developed By:
+            <a
+              href="#"
+              target="_blank"
+              class="font-bold hover:underline"
+              >Digital Solution Cell</a
+            >
+          </div>
         </footer>
-    </div>
+      </div>
     <!--  -->
     <!--  -->
     <script>
