--- a/client/student-form.html
+++ b/client/student-form.html
@@ -137,7 +137,7 @@
     <div id="app" class="w-full max-w-2xl  pl-[1vw] pt-6">
         <div id="formContainer" class="w-full">
             <form id="studentForm" class="bg-white shadow-2xl rounded-lg px-8 pt-6 pb-8 mb-4">
-                <h1 class="text-3xl font-bold mb-6 text-center text-gray-800 border-b-2 border-blue-500 pb-2">Student
+                <h1 class="text-2xl font-bold mb-6 text-center text-gray-800 border-b-2 border-blue-500 pb-2">Pharmaceutical Society Student
                     Registration Form</h1>
                 <p class="mb-8 text-center text-gray-600">Please fill out the form with your information.</p>
                 <section class="mb-8">
