Fixed upload profile pic student form handling issues

--- a/client/student-form.html
+++ b/client/student-form.html
@@ -176,6 +176,18 @@
                         </select>
                     </div>
                 </section>
+
+                <!-- Profile Picture -->
+                <section class="mb-8">
+                    <h2 class="text-2xl font-semibold mb-4 text-blue-600">Profile Picture</h2>
+                    <div class="mb-6">
+                        <label class="block text-gray-700 text-sm font-bold mb-2" for="profilePic">Upload Profile
+                            Picture</label>
+                        <input id="profilePic" type="file" name="profilePic" accept="image/*"
+                            class="shadow appearance-none border rounded-lg w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:border-blue-500">
+                    </div>
+                </section>
+
                 <div class="flex items-center justify-center">
                     <button id="submitButton" type="submit"
                         class="bg-button-red text-white font-bold py-3 px-6 rounded-full transition duration-300 ease-in-out hover:bg-button-red-hover">Submit</button>
@@ -205,11 +217,11 @@
             form.addEventListener('submit', function (e) {
                 e.preventDefault();
 
-                // Client-side validation
                 const fullName = document.getElementById('fullName').value.trim();
                 const email = document.getElementById('email').value.trim();
                 const phone = document.getElementById('phone').value.trim();
                 const course = document.getElementById('course').value;
+                const profilePic = document.getElementById('profilePic').files[0];
 
                 // Basic validation
                 if (!fullName || !email || !phone || !course) {
@@ -231,6 +243,14 @@
                     return;
                 }
 
+                // Profile picture validation (size < 200KB)
+                if (profilePic) {
+                    if (profilePic.size > 200 * 1024) {
+                        showToast('Profile picture size must be less than 200KB', 'error');
+                        return;
+                    }
+                }
+
                 // Create FormData object
                 const formData = new FormData(form);
 
@@ -244,8 +264,6 @@
                         if (data.status === 'success') {
                             showToast(data.message);
                             form.reset(); // Reset the form
-                            // Optional: Redirect after successful submission
-                            // window.location.href = 'index.html';
                         } else {
                             showToast(data.message, 'error');
                         }
