--- a/client/index copy.html
+++ b/client/index copy.html
@@ -14,19 +14,6 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
-
-  <!--  -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
 </head>
 <style>
   /* Navbar styling */
@@ -159,67 +146,34 @@
       </div>
     </div>
   </nav>
-
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <!-- Duplicate the below div to get multiple slides -->
-      <!-- 1st slide-->
       <div class="carousel-item active">
-        <img style="height: 550px;filter: brightness(70%);" class="d-block w-100"
+        <img
           src="https://images.unsplash.com/photo-1731176497854-f9ea4dd52eb6?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="First slide">
+          class="d-block w-100" alt="First slide" style="object-fit: cover; height: 500px; filter: brightness(50%)" />
         <div class="carousel-caption d-none d-md-block">
-          <h1 style="margin-bottom: 20px;">Welcome back <span id="username"></span>!</h1>
-          <p style="margin-bottom: 100px;">Pharmaceutical Society's Alumni & Students Association, DU</p>
+          <h3>Welcome back <span id="username"></span>!</h3>
+          <p>Pharmaceutical Society's Alumni & Students Association</p>
         </div>
       </div>
-      <!-- 2nd slide-->
-      <div class="carousel-item ">
-        <img style="height: 550px;filter: brightness(70%);" class="d-block w-100"
-          src="https://images.unsplash.com/photo-1731176497854-f9ea4dd52eb6?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="First slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h1 style="margin-bottom: 20px;">Welcome back <span id="username"></span>!</h1>
-          <p style="margin-bottom: 100px;">Pharmaceutical Society's Alumni & Students Association, DU</p>
-        </div>
-      </div>
-      <!-- 3rd slide-->
-      <div class="carousel-item ">
-        <img style="height: 550px;filter: brightness(70%);" class="d-block w-100"
-          src="https://images.unsplash.com/photo-1731176497854-f9ea4dd52eb6?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="First slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h1 style="margin-bottom: 20px;">Welcome back <span id="username"></span>!</h1>
-          <p style="margin-bottom: 100px;">Pharmaceutical Society's Alumni & Students Association, DU</p>
-        </div>
-      </div>
-
-
+      <!-- Repeat for other slides -->
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span style="display: none;" class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span style="display: none;" class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
 
-
-  <iframe src="./includes/marquee.html" width="100%"  frameborder="0"></iframe>
-
-  <!-- About and notifications -->
   <section class="container mt-5 mb-5">
     <div class="row">
       <div class="col-md-6 mt-5">
-        <h2 style="font-family: Georgia, Times, 'Times New Roman', serif;">ABOUT US</h2>
-        <p style="font-family: Georgia, Times, 'Times New Roman', serif;">
+        <h2>ABOUT US</h2>
+        <p>
           The mission of the Pharmaceutical Society, Dibrugarh University, is
           to support the professional development of pharmacy students through
           networking, mentorship, and access to resources. The Society
@@ -230,21 +184,18 @@
           focused on drug safety, disease prevention, and healthcare
           education.
         </p>
-        <a href="./about.html" class="btn btn-outline-primary"
-          style="font-family: Georgia, Times, 'Times New Roman', serif; background-color: #FAEBD7; color: #333; padding: 10px 20px; border: 2px solid #333; border-radius: 10px; cursor: pointer; transition: all 0.3s ease; box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); animation: pulse 3s infinite; font-family: Montserrat; font-weight: 600;">Read
-          More</a>
+        <a href="/about" class="btn btn-primary">Read More</a>
       </div>
       <div class="col-md-6 mt-5">
         <h2>NOTIFICATIONS</h2>
-        <div style="font-family: Georgia, Times, 'Times New Roman', serif;" id="notifications"></div>
-        <a style="font-family: Georgia, Times, 'Times New Roman', serif; background-color: #FAEBD7; color: #333; padding: 10px 20px; border: 2px solid #333; border-radius: 10px; cursor: pointer; transition: all 0.3s ease; box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); animation: pulse 3s infinite; font-family: Montserrat; font-weight: 600;"
-          href="./news-events.html" class="btn btn-outline-primary">View All</a>
+        <div id="notifications"></div>
+        <a href="/news-events" class="btn btn-outline-primary">View All</a>
       </div>
     </div>
   </section>
 
 
-  <footer style="background-color: aliceblue" class=" text-lg-start text-muted">
+  <footer style="background-color: antiquewhite" class="text-center text-lg-start text-muted">
     <!-- Social Media Links -->
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <div class="me-5 d-none d-lg-block">
@@ -443,7 +394,37 @@
     });
   </script>
 
+  <!-- Slider code -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const carousel = document.getElementById('carouselExampleCaptions');
+      const carouselInstance = new bootstrap.Carousel(carousel, {
+        interval: 3000, // Auto-scroll every 3 seconds
+        ride: 'carousel' // Enable auto-scrolling
+      });
 
+      // Optional: Add manual navigation buttons functionality
+      const prevButton = carousel.querySelector('.carousel-control-prev');
+      const nextButton = carousel.querySelector('.carousel-control-next');
+
+      prevButton.addEventListener('click', () => {
+        carouselInstance.prev();
+      });
+
+      nextButton.addEventListener('click', () => {
+        carouselInstance.next();
+      });
+
+      // Optional: Pause auto-scrolling on hover
+      carousel.addEventListener('mouseenter', () => {
+        carouselInstance.pause();
+      });
+
+      carousel.addEventListener('mouseleave', () => {
+        carouselInstance.cycle();
+      });
+    });
+  </script>
   <script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"></script>
