--- a/client/posts.html
+++ b/client/posts.html
@@ -135,11 +135,11 @@
     <div id="posts-container" class="m-5 rounded-2xl bg-gray-50 shadow-lg p-5 relative min-h-screen">
         <div id="posts-header" class="flex justify-between mb-5 gap-2">
             <button id="alumni-tab"
-                class="flex-1 text-center py-3 cursor-pointer font-medium text-gray-700 transition-all duration-300 ease-in-out rounded-lg bg-gray-200 hover:bg-gray-300 active:scale-95">
+                class="flex-1 text-center py-3 cursor-pointer font-medium text-gray-700 transition-all duration-300 ease-in-out rounded-lg bg-aliceblue hover:bg-slate-500 hover:text-antique-white ctive:scale-95">
                 Alumni Posts
             </button>
             <button id="student-tab"
-                class="flex-1 text-center py-3 cursor-pointer font-medium text-gray-700 transition-all duration-300 ease-in-out rounded-lg bg-gray-200 hover:bg-gray-300 active:scale-95">
+                class="flex-1 text-center py-3 cursor-pointer font-medium text-gray-700 transition-all duration-300 ease-in-out rounded-lg bg-aliceblue hover:bg-slate-500 hover:text-antique-white  active:scale-95">
                 Student Queries
             </button>
         </div>
