--- a/client/index.html
+++ b/client/index.html
@@ -142,9 +142,9 @@
               aria-expanded="false">
               Forms
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item text-white" href="./alumni-form.html" onclick="setActiveLink(this)">Alumni Form</a></li>
-              <li><a class="dropdown-item text-white" href="./student-form.html" onclick="setActiveLink(this)">Student Form</a>
+            <ul style="background-color: #0C133B; padding-top: 0px;" class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a style="background-color: #0C133B;" class="dropdown-item text-white" href="./alumni-form.html" onclick="setActiveLink(this)">Alumni Form</a></li>
+              <li><a style="background-color: #0C133B;" class="dropdown-item text-white" href="./student-form.html" onclick="setActiveLink(this)">Student Form</a>
               </li>
             </ul>
           </li>
